# MatchForge

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py  models.py
backend/app/api/: routes.py
backend/app/core/: config.py  mock_data.py
backend/app/graph/: agent.py
backend/app/services/: generator.py  parser.py  scoring.py
backend/app/tests/: test_api.py  test_services.py
backend/matchforge_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: product-spec.md  technical-spec.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: BriefComposer.test.tsx  BriefComposer.tsx  HeroMetrics.tsx  InsightsPanel.tsx  PipelineBoard.tsx  RecruiterCard.test.tsx  RecruiterCard.tsx  RecruiterGrid.tsx  ScenarioPanel.tsx  StatusBanner.tsx  TopBar.tsx
frontend/src/data/: fallbackScenarios.ts
frontend/src/hooks/: useMatchForge.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/test/: setup.ts
